--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - master  # Runs only on the master branch push
+      - master  # Runs only on master branch push
 
 jobs:
   build-and-push:
@@ -16,19 +16,22 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+      - name: Verify Docker Login
+        run: docker info
+
       - name: Detect Changed Services
         id: changed-services
         run: |
           echo "Checking for changes..."
           CHANGED_SERVICES=""
-
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "question-app/"; then
+          
+          if git diff --name-only HEAD^ HEAD | grep -q "question-app/"; then
             CHANGED_SERVICES="$CHANGED_SERVICES question-app"
           fi
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "submit-app/"; then
+          if git diff --name-only HEAD^ HEAD | grep -q "submit-app/"; then
             CHANGED_SERVICES="$CHANGED_SERVICES submit-app"
           fi
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "db/"; then
+          if git diff --name-only HEAD^ HEAD | grep -q "db/"; then
             CHANGED_SERVICES="$CHANGED_SERVICES db"
           fi
 
@@ -39,22 +42,19 @@ jobs:
         if: contains(env.CHANGED_SERVICES, 'question-app')
         run: |
           IMAGE_TAG=$(git rev-parse --short HEAD)
-          docker build -t harshanasenadeera/question-app:latest -t harshanasenadeera/question-app:$IMAGE_TAG ./question-app
-          docker push harshanasenadeera/question-app:latest
-          docker push harshanasenadeera/question-app:$IMAGE_TAG
+          docker build --no-cache -t harshanasenadeera/question-app:latest -t harshanasenadeera/question-app:$IMAGE_TAG ./question-app
+          docker push --all-tags harshanasenadeera/question-app
 
       - name: Build and Push Submit App (if changed)
         if: contains(env.CHANGED_SERVICES, 'submit-app')
         run: |
           IMAGE_TAG=$(git rev-parse --short HEAD)
-          docker build -t harshanasenadeera/submit-app:latest -t harshanasenadeera/submit-app:$IMAGE_TAG ./submit-app
-          docker push harshanasenadeera/submit-app:latest
-          docker push harshanasenadeera/submit-app:$IMAGE_TAG
+          docker build --no-cache -t harshanasenadeera/submit-app:latest -t harshanasenadeera/submit-app:$IMAGE_TAG ./submit-app
+          docker push --all-tags harshanasenadeera/submit-app
 
       - name: Build and Push Database (if changed)
         if: contains(env.CHANGED_SERVICES, 'db')
         run: |
           IMAGE_TAG=$(git rev-parse --short HEAD)
-          docker build -t harshanasenadeera/db:latest -t harshanasenadeera/db:$IMAGE_TAG ./db
-          docker push harshanasenadeera/db:latest
-          docker push harshanasenadeera/db:$IMAGE_TAG
+          docker build --no-cache -t harshanasenadeera/db:latest -t harshanasenadeera/db:$IMAGE_TAG ./db
+          docker push --all-tags harshanasenadeera/db
