--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build and Push to Docker Hub
     runs-on: ubuntu-latest
     outputs:
-      changed_services: ${{ steps.changed-services.outputs.changed_services }}
+      changed_services: "${{ steps.changed-services.outputs.changed_services }}"  # Fixed output format
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -48,28 +48,27 @@ jobs:
           fi
 
           echo "Detected Changes: $CHANGED_SERVICES"
-          echo "changed_services=$CHANGED_SERVICES" >> "$GITHUB_ENV"
           echo "changed_services=$CHANGED_SERVICES" >> "$GITHUB_OUTPUT"
 
       - name: Debug Changed Services
-        run: echo "Changed Services: ${{ env.changed_services }}"
+        run: echo "Changed Services: ${{ steps.changed-services.outputs.changed_services }}"
 
       - name: Build and Push Question App (if changed)
-        if: contains(env.changed_services, 'question-app')
+        if: contains(steps.changed-services.outputs.changed_services, 'question-app')
         run: |
           echo "Building and pushing Question App..."
           docker build -t harshanasenadeera/question-app:latest ./distributed-quiz-service/question-app
           docker push harshanasenadeera/question-app:latest
 
       - name: Build and Push Submit App (if changed)
-        if: contains(env.changed_services, 'submit-app')
+        if: contains(steps.changed-services.outputs.changed_services, 'submit-app')
         run: |
           echo "Building and pushing Submit App..."
           docker build -t harshanasenadeera/submit-app:latest ./distributed-quiz-service/submit-app
           docker push harshanasenadeera/submit-app:latest
 
       - name: Build and Push Database (if changed)
-        if: contains(env.changed_services, 'db')
+        if: contains(steps.changed-services.outputs.changed_services, 'db')
         run: |
           echo "Building and pushing Database..."
           docker build -t harshanasenadeera/db:latest ./distributed-quiz-service/db
