Add Update pipe line

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,8 @@ jobs:
 
       - name: Install ELT Dependencies
         run: |
-          pip install pandas sqlalchemy psycopg2-binary || exit 1
+          pip install pandas sqlalchemy psycopg2-binary pymysql
+    
 
       - name: Extract Data from Database
         run: |
