--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Set up MySQL container
+        uses: docker/setup-buildx-action@v2
+        with:
+          version: latest
+
+      - name: Run MySQL service in a Docker container
+        run: |
+          docker run --name mysql-container -e MYSQL_ROOT_PASSWORD=root1234 -e MYSQL_DATABASE=quiz_db -d mysql:5.7
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -88,19 +97,10 @@ jobs:
       - name: Install ELT Dependencies
         run: |
           pip install pandas sqlalchemy psycopg2-binary pymysql
-    
 
       - name: Extract Data from Database
         run: |
-          python distributed-quiz-service/etl/extract_data.py || exit 1
-
-      - name: Load Data into Data Warehouse
-        run: |
-          python distributed-quiz-service/etl/load_data.py
-
-      - name: Transform Data for Analysis
-        run: |
-          python distributed-quiz-service/etl/transform_data.py
+          python distributed-quiz-service/etl/extract_data.py
 
       - name: Verify ELT Completion
         run: echo "ELT Pipeline completed successfully!"
