--- a/distributed-quiz-service/docker-compose.yml
+++ b/distributed-quiz-service/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       - quiz-db-data:/var/lib/mysql
     networks:
       - quiz-network
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot1234" ]
       interval: 10s
